[project]
name = "plotlmodea"
version = "0.1.0"
description = "LModeA extraction and plotting tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"matplotlib>=3.8",
	"numpy>=1.26",
]

[project.scripts]
lmodea-extract = "plotlmodea.extractor:main"
lmodea-plot = "plotlmodea.plot_lmodes:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotlmodea"]
